2023-04-29  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl.c (pkl_module_loaded_p): Remove function.
	(pkl_add_module): Likewise.
	* libpoke/pkl.h: ... and prototypes.
	* libpoke/pkl.c (struct pkl_compiler): Remove `modules' and
	`num_modules' fields.
	(pkl_new): Do not initialize these.
	(pkl_free): Do not dispose memory for these.
	* libpoke/pkl-tab.y (load_module): Do not call pkl_add_module.

2023-04-29  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl.c (pkl_load): Allow loading modules more than once.
	* libpoke/libpoke.h: Document this behavior.

2023-04-28  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.c (pk_load): Fix returned value.
	* poke/pk-cmd.c (pk_cmd_init): Fix call to pk_load.
	* poke/poke.c (initialize): Likewise.

2023-04-26  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h: Prototype for pk_keyword_p.
	* libpoke/libpoke.c (pk_keyword_p): New function.
	* libpoke/Makefile.am: Generate $(srcdir)/pkl-keywords.def.
	* testsuite/poke.libpoke/api.c (test_pk_keyword_p): New test.
	* .gitignore: Add /libpoke/pkl-keywords.def.

2023-04-25  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.std/std-test.pk: Do not use "standard" types.

2023-04-25  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/lib/poke-pk.exp (tap_execute): Pass --no-stdtypes to
	poke.
	* pickles/asn1-ber.pk: Do not use "standard" types.
	* pickles/bmp.pk: Likewise.
	* pickles/color.pk: Likewise.
	* pickles/id3v2.pk: Likewise.
	* pickles/id3v1.pk: Likewise.
	* pickles/ieee754.pk: Likewise.
	* pickles/leb128.pk: Likewise.
	* pickles/mbr.pk: Likewise.
	* pickles/openpgp.pk: Likewise.
	* pickles/jffs2.pk: Likewise.
	* pickles/pdap.pk: Likewise.
	* pickles/pcap.pk: Likewise.
	* pickles/riscv.pk: Likewise.
	* testsuite/poke.pickles/mbr-test.pk: Likewise.
	* testsuite/poke.pickles/uuid-test.pk: Likewise.
	* testsuite/poke.pickles/search-test.pk: Likewise.

2023-04-25  Jose E. Marchesi  <jemarch@gnu.org>
